test: refatoração dos testes usando padrão Object Mother
- Introdução da classe utilitária TestMocks para centralizar criação de dados
- Refatoração do RickAndMortyServiceTest para usar TestMocks, removendo boilerplate
- Refatoração do PersonagemControllerTest para usar TestMocks, melhorando legibilidade
- Aplicação do princípio DRY no código de teste para maior manutenibilidade