@@ -1,19 +1,17 @@
 package com.api.rickandmorty.service;
 
 import com.api.rickandmorty.client.RickAndMortyClient;
-import com.api.rickandmorty.client.response.CharacterListResponse;
 import com.api.rickandmorty.client.response.CharacterResponse;
 import com.api.rickandmorty.mapper.RickAndMortyMapper;
 import com.api.rickandmorty.model.PaginaPersonagem;
 import com.api.rickandmorty.model.PersonagemResponse;
+import com.api.rickandmorty.util.TestMocks;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
-import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -37,19 +35,8 @@ class RickAndMortyServiceTest {
     @Test
     void listarPersonagens_DeveRetornarPaginaPreenchida_QuandoClientRetornarDados() {
         // Arrange
-        CharacterResponse charResponse = new CharacterResponse();
-        charResponse.setId(1);
-        charResponse.setName("Rick Sanchez");
-        
-        CharacterListResponse listResponse = new CharacterListResponse();
-        listResponse.setResults(List.of(charResponse));
-
-        PersonagemResponse mappedResponse = new PersonagemResponse();
-        mappedResponse.setId(1);
-        mappedResponse.setNome("Rick Sanchez");
-
-        when(client.listarPersonagens(anyInt())).thenReturn(Optional.of(listResponse));
-        when(mapper.toResponse(any(CharacterResponse.class))).thenReturn(mappedResponse);
+        when(client.listarPersonagens(anyInt())).thenReturn(Optional.of(TestMocks.criarCharacterListResponse()));
+        when(mapper.toResponse(any(CharacterResponse.class))).thenReturn(TestMocks.criarPersonagemResponse());
 
         // Act
         PaginaPersonagem resultado = service.listarPersonagens(1);
@@ -58,7 +45,7 @@ class RickAndMortyServiceTest {
         assertNotNull(resultado);
         assertEquals(1, resultado.getPage());
         assertFalse(resultado.getResults().isEmpty());
-        assertEquals("Rick Sanchez", resultado.getResults().get(0).getNome());
+        assertEquals(TestMocks.NOME_PADRAO, resultado.getResults().getFirst().getNome());
     }
 
     @Test
@@ -77,26 +64,15 @@ class RickAndMortyServiceTest {
     @Test
     void buscarPorNome_DeveRetornarPersonagem_QuandoEncontrado() {
         // Arrange
-        CharacterResponse charResponse = new CharacterResponse();
-        charResponse.setId(1);
-        charResponse.setName("Rick Sanchez");
-
-        CharacterListResponse listResponse = new CharacterListResponse();
-        listResponse.setResults(List.of(charResponse));
-
-        PersonagemResponse mappedResponse = new PersonagemResponse();
-        mappedResponse.setId(1);
-        mappedResponse.setNome("Rick Sanchez");
-
-        when(client.buscarPorNome(anyString())).thenReturn(Optional.of(listResponse));
-        when(mapper.toResponse(any(CharacterResponse.class))).thenReturn(mappedResponse);
+        when(client.buscarPorNome(anyString())).thenReturn(Optional.of(TestMocks.criarCharacterListResponse()));
+        when(mapper.toResponse(any(CharacterResponse.class))).thenReturn(TestMocks.criarPersonagemResponse());
 
         // Act
         PersonagemResponse resultado = service.buscarPorNome("Rick");
 
         // Assert
         assertNotNull(resultado);
-        assertEquals("Rick Sanchez", resultado.getNome());
+        assertEquals(TestMocks.NOME_PADRAO, resultado.getNome());
     }
 
     @Test
@@ -105,9 +81,9 @@ class RickAndMortyServiceTest {
         when(client.buscarPorNome(anyString())).thenReturn(Optional.empty());
 
         // Act & Assert
-        RuntimeException exception = assertThrows(RuntimeException.class, () -> {
-            service.buscarPorNome("Ninguem");
-        });
+        RuntimeException exception = assertThrows(RuntimeException.class, () -> 
+            service.buscarPorNome("Ninguém")
+        );
         
         assertEquals("Personagem não encontrado", exception.getMessage());
     }
